syntax = "proto3";

service UsersService {
  rpc GetUser (UserId) returns (User) {}
  rpc AddUser (User) returns (User) {}
  rpc EditUser (User) returns (User) {}
  rpc DeleteUser (UserId) returns (Empty) {}
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message UserId {
  int32 id = 1;
}

message Empty {}